--- a/package.json
+++ b/package.json
@@ -10,23 +10,32 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.6",
+    "@hookform/resolvers": "^3.4.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.13",
+    "@tinymce/tinymce-react": "^5.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
+    "fs-extra": "^11.2.0",
     "lucide-react": "^0.378.0",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "types": "github:tailwindcss/typography"
+    "tinymce": "^7.1.1",
+    "types": "github:tailwindcss/typography",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
